tests/ui/typeck/quiet-type-err-let-binding.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/quiet-type-err-let-binding.rs:14:13
   |
LL |     let x = foo();
   |             ^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
